--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ h1, h2, h3, h5, p, button, a {
 
 .screen, .start-screen {
   width: 100%;
-  height: 450px;
+  height: 100%;
   border: black solid 2px;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.6);
@@ -42,43 +42,42 @@ h1, h2, h3, h5, p, button, a {
   position: relative;
 }
 
+.start-screen {
+  position: relative;
+  top: 35%;
+}
+
 .start-screen h1 {
   margin: 50px;
 }
 
-.start-btn {
+.start-btn, .code-btn {
   width: 300px;
   height: 100px;
   font-size: 25px;
-}
+  background-color:  #4a99ff;
 
-
-
-.screen-bottom {
-  background-color: #4a99ff;
-  width: 100%;
-  height: 50px;
-  position: absolute;
-  bottom: 0px;
-  border-bottom-left-radius: 2px;
-  border-bottom-right-radius: 2px;
-  padding-top: 10px;
 }
 
 .options {
-  margin: .5em;
+  margin: 10px;
   overflow: auto;
 }
 
 .answer-section {
     background-color: rgba(255, 255, 255, 0.6);
+    border: 1px black solid;
+    border-radius: 5px;
+}
 
+.answer-spacer {
+  border-radius: 5px;
 }
 
 .ansr-btns {
-  width: 80%;
-  height: 75px;
-  margin: 20px;
+  width: 50%;
+  height: 50px;
+  margin: 25px;
   border: 1px groove grey;
   border-radius: 5px;
   box-shadow: black 0px 0px 10px;
@@ -107,9 +106,17 @@ h1, h2, h3, h5, p, button, a {
 }
 
 .footer {
-  height: 80px;
+  height: 50px;
 }
 
 #nametag {
-  margin-top: 15PX; 
+  margin-top: 10px;
+}
+
+.score-content {
+  margin: 20px;
+}
+
+.score-content h1 {
+  margin-top: 0px;
 }
