--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ h1, h2, h3, h5, p, button, a {
   width: 500px;
 }
 
+#quiz-screen h1 {
+  font-size: 20pt;
+}
+
 .options {
   margin: 10px;
   overflow: auto;
